# libqmycroft

./: CMakeLists.txt  README.md  dev_setup.sh
examples/: example.qml
examples/vocab/: exampleapp_test_intent_two.intent  test_intent_one.intent
lib/: CMakeLists.txt  audiotranscribe.cpp  audiotranscribe.h  controller.cpp  controller.h  libqmycroft.qrc  plugins.qmltypes  qmldir  qmycroftplugin.cpp  qmycroftplugin.h  skillentry.cpp  skillentry.h  skillmanager.cpp  skillmanager.h
lib/qml/: TranscribeButton.qml
libqmycroft-mock-interface/: __init__.py
